# NAATOS_QR_LFA

./: .sesskey  NAATOS_QR_LFA.py  profiles.db  pyproject.toml
data/: drawapp.db
