[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

project]
name = "NAATOS_QR_LFA"
version = "0.0.1"
authors = [
  { name="Josh Bishop", email="joshua.bishop@ghlabs.org" },
  { name="Wenbo Wang", email="wenbo.wang@ghlabs.org" },
]
description = "LFA analysis for NAATOS test consumables with QR codes"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = ""
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/"
Issues = "https://github.com/"